data/derived/sp14/progs/unify/prog3348.ml.out
Characters 204-231:
  let (_, ans) = mulHelper 0::(List.rev (l)) in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b * 'c
